Adicionado nova imagem background e organizado css dos backgrounds

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div id="background-piscina" class="row background"> </div>
+    <div id="background-one" class="row background"> </div>
 
     <div id="primeira-cabana" class="row cabana">
       <div class="container">
@@ -123,7 +123,7 @@
       </div>
     </div>
 
-    <div id="background-todas-cabanas" class="row background"></div>
+    <div id="background-two" class="row background"></div>
 
     <div class="row extras">
       <div class="container">
@@ -164,7 +164,7 @@
 
 
 
-    <div id="background-piscina2" class="row background"> </div>
+    <div id="background-three" class="row background"> </div>
 
     <div class="row contato">
       <div class="container">
