Logo Ibizaquera quanto esquerdo superior

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <div class="row header">
       <div class="container">
         <div class="row">
-          <h1>IBIZAQUERA</h1>
+
+          <div class="four columns">
+            <h1>IBIZAQUERA</h1>
+          </div>
+
         </div>
       </div>
     </div>
