Inserção do menu, Casas e Contato, Substituição da cabana por casa

--- a/index.html
+++ b/index.html
@@ -36,48 +36,56 @@
             <h1>IBIZAQUERA</h1>
           </div>
 
+          <div class="seven columns">
+            <ul>
+              <li><a href="#casa">Casas</a></li>
+              <!-- <li><a href="#galeria">Galeria</a></li> -->
+              <li><a href="#contato">Contato</a></li>
+            </ul>
+          </div>
+
         </div>
       </div>
     </div>
 
     <div id="background-one" class="row background"> </div>
 
-    <div id="primeira-cabana" class="row cabana">
+    <div id="primeira-casa" class="row casa">
       <div class="container">
 
-        <div class="row">
-          <h4>Primeira Cabana</h4>
+        <div id="casa" class="row">
+          <h4>Primeira Casa</h4>
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/primeira-cabana/quarto-1.jpg">
+            <img src="assets/images/primeira-casa/quarto-1.jpg">
             <p>Primeiro Quarto</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/primeira-cabana/quarto-2.jpg">
+            <img src="assets/images/primeira-casa/quarto-2.jpg">
             <p>Segundo Quarto</p>
           </div>
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/primeira-cabana/quarto-3.jpg">
+            <img src="assets/images/primeira-casa/quarto-3.jpg">
             <p>Terceiro Quarto</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/primeira-cabana/cozinha.jpg">
+            <img src="assets/images/primeira-casa/cozinha.jpg">
             <p>Cozinha</p>
           </div>
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/primeira-cabana/sala.jpg">
+            <img src="assets/images/primeira-casa/sala.jpg">
             <p>Sala</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/primeira-cabana/banheiro.jpg">
+            <img src="assets/images/primeira-casa/banheiro.jpg">
             <p>Banheiro</p>
           </div>
         </div>
@@ -85,42 +93,42 @@
       </div>
     </div>
 
-    <div id="segunda-cabana" class="row cabana">
+    <div id="segunda-casa" class="row casa">
       <div class="container">
 
         <div class="row">
-          <h4>Segunda Cabana</h4>
+          <h4>Segunda Casa</h4>
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/segunda-cabana/quarto-1.jpg">
+            <img src="assets/images/segunda-casa/quarto-1.jpg">
             <p>Primeiro Quarto</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/segunda-cabana/quarto-2.jpg">
+            <img src="assets/images/segunda-casa/quarto-2.jpg">
             <p>Segundo Quarto</p>
           </div>
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/segunda-cabana/quarto-3.jpg">
+            <img src="assets/images/segunda-casa/quarto-3.jpg">
             <p>Terceiro Quarto</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/segunda-cabana/cozinha.jpg">
+            <img src="assets/images/segunda-casa/cozinha.jpg">
             <p>Cozinha</p>
           </div>
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/segunda-cabana/sala.jpg">
+            <img src="assets/images/segunda-casa/sala.jpg">
             <p>Sala</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/segunda-cabana/banheiro.jpg">
+            <img src="assets/images/segunda-casa/banheiro.jpg">
             <p>Banheiro</p>
           </div>
         </div>
@@ -170,7 +178,7 @@
 
     <div id="background-three" class="row background"> </div>
 
-    <div class="row contato">
+    <div id="contato" class="row contato">
       <div class="container">
         
         <div class="row">
