Titulo whatsapp e nono digito

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
           </div>
 
           <div class="six columns">
-            <h5>Telefone</h5>
-            <p>+55 48 9621-9569</p>
+            <h5>Telefone / Whatsapp</h5>
+            <p>+55 48 99621-9569</p>
           </div>
 
         </div>
