Nomes nos quartos, solteiro e casal, tamanho titulo casas e hr

--- a/index.html
+++ b/index.html
@@ -55,23 +55,24 @@
 
         <div id="casa" class="row">
           <h4>Primeira Casa</h4>
+          <hr />
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/primeira-casa/quarto-1.jpg">
-            <p>Primeiro Quarto</p>
+            <img src="assets/images/primeira-casa/quarto-casal-1.jpg">
+            <p>Quarto Casal 1</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/primeira-casa/quarto-2.jpg">
-            <p>Segundo Quarto</p>
+            <img src="assets/images/primeira-casa/quarto-casal-2.jpg">
+            <p>Quarto Casal 2</p>
           </div>
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/primeira-casa/quarto-3.jpg">
-            <p>Terceiro Quarto</p>
+            <img src="assets/images/primeira-casa/quarto-solteiro.jpg">
+            <p>Quarto Solteiro</p>
           </div>
           <div class="six columns">
             <img src="assets/images/primeira-casa/cozinha.jpg">
@@ -98,23 +99,24 @@
 
         <div class="row">
           <h4>Segunda Casa</h4>
+          <hr />
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/segunda-casa/quarto-1.jpg">
-            <p>Primeiro Quarto</p>
+            <img src="assets/images/segunda-casa/quarto-casal-1.jpg">
+            <p>Quarto Casal 1</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/segunda-casa/quarto-2.jpg">
-            <p>Segundo Quarto</p>
+            <img src="assets/images/segunda-casa/quarto-solteiro.jpg">
+            <p>Quarto Solteiro</p>
           </div>
         </div>
 
         <div class="row">
           <div class="six columns">
-            <img src="assets/images/segunda-casa/quarto-3.jpg">
-            <p>Terceiro Quarto</p>
+            <img src="assets/images/segunda-casa/quarto-casal-2.jpg">
+            <p>Quarto Casal 2</p>
           </div>
           <div class="six columns">
             <img src="assets/images/segunda-casa/cozinha.jpg">
