--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
 
           <div class="four columns">
-            <h1>IBIZAQUERA</h1>
+            <h1>Ibizaquera</h1>
           </div>
 
           <div class="seven columns">
