Menu casas, extra e contato, nome das casas

--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
       <div class="container">
         <div class="row">
 
-          <div class="four columns">
+          <div class="three columns">
             <h1>Ibizaquera</h1>
           </div>
 
-          <div class="seven columns">
+          <div class="eight columns">
             <ul>
-              <li><a href="#casa">Casas</a></li>
-              <!-- <li><a href="#galeria">Galeria</a></li> -->
+              <li><a href="#sobrado-da-lagoa">Sobrado da Lagoa</a></li>
+              <li><a href="#morada-da-lagoa">Morada da Lagoa</a></li>
+              <li><a href="#extra">Extra</a></li>
               <li><a href="#contato">Contato</a></li>
+              <!-- <li><a href="#galeria">Galeria</a></li> -->
             </ul>
           </div>
 
@@ -50,11 +52,11 @@
 
     <div id="background-one" class="row background"> </div>
 
-    <div id="primeira-casa" class="row casa">
+    <div id="sobrado-da-lagoa" class="row casa">
       <div class="container">
 
         <div id="casa" class="row">
-          <h4>Primeira Casa</h4>
+          <h4>Sobrado da Lagoa</h4>
           <hr />
         </div>
 
@@ -94,11 +96,11 @@
       </div>
     </div>
 
-    <div id="segunda-casa" class="row casa">
+    <div id="morada-da-lagoa" class="row casa">
       <div class="container">
 
         <div class="row">
-          <h4>Segunda Casa</h4>
+          <h4>Morada da Lagoa</h4>
           <hr />
         </div>
 
@@ -139,7 +141,7 @@
 
     <div id="background-two" class="row background"></div>
 
-    <div class="row extras">
+    <div id="extra" class="row extras">
       <div class="container">
 
         <div class="row">
