--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
 
     <div id="background-one" class="row background"> </div>
 
+    <div id="info" class="row">
+      <div class="container">
+        <div class="row">
+        <p>
+        Localizada as margens da Lagoa de Ibiraquera, onde você pode encontrar a
+        tranquilidade para descansar e aproveitar uma paisagem maravilhosa, bem
+        como curtir as praias mais badaladas da região, com suas festas e vida
+        noturna.
+        Além das belíssimas praias, a região oferece aos turistas trilhas
+        ecológicas, passeios de stand up paddle e caiaque, aulas de kitesurf, além
+        de excelentes restaurantes e os melhores bares e casas noturnas da região.
+        </p>
+        </div>
+      </div>
+    </div>
+
+
     <div id="sobrado-da-lagoa" class="row casa">
       <div class="container">
 
