Substituição do extra por comodidades e modificações nas comodidades

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul>
               <li><a href="#sobrado-da-lagoa">Sobrado da Lagoa</a></li>
               <li><a href="#morada-da-lagoa">Morada da Lagoa</a></li>
-              <li><a href="#extra">Extra</a></li>
+              <li><a href="#comodidade">Comodidades</a></li>
               <li><a href="#contato">Contato</a></li>
               <!-- <li><a href="#galeria">Galeria</a></li> -->
             </ul>
@@ -73,40 +73,46 @@
       <div class="container">
 
         <div id="casa" class="row">
-          <h4>Sobrado da Lagoa</h4>
+          <h4 class="casa-nome">Sobrado da Lagoa</h4>
           <hr />
         </div>
 
-        <div class="row">
+        <div class="row casa-box">
           <div class="six columns">
-            <img src="assets/images/primeira-casa/quarto-casal-1.jpg">
-            <p>Quarto Casal 1</p>
+            <img class="casa-img" src="assets/images/primeira-casa/quarto-casal-1.jpg">
+            <h5 class="casa-tipo">Quarto 1</h5>
+            <p class="casa-texto">1 Cama de casal, 2 camas de solterio</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/primeira-casa/quarto-casal-2.jpg">
-            <p>Quarto Casal 2</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="six columns">
-            <img src="assets/images/primeira-casa/quarto-solteiro.jpg">
-            <p>Quarto Solteiro</p>
-          </div>
-          <div class="six columns">
-            <img src="assets/images/primeira-casa/cozinha.jpg">
-            <p>Cozinha</p>
+            <img class="casa-img" src="assets/images/primeira-casa/quarto-casal-2.jpg">
+            <h5 class="casa-tipo">Quarto 2</h5>
+            <p class="casa-texto">1 cama de casal</p>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row casa-box">
           <div class="six columns">
-            <img src="assets/images/primeira-casa/sala.jpg">
-            <p>Sala</p>
+            <img class="casa-img" src="assets/images/primeira-casa/quarto-solteiro.jpg">
+            <h5 class="casa-tipo">Quarto 3</h5>
+            <p class="casa-texto">2 camas de solteiro</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/primeira-casa/banheiro.jpg">
-            <p>Banheiro</p>
+            <img class="casa-img" src="assets/images/primeira-casa/cozinha.jpg">
+            <h5 class="casa-tipo">Cozinha</h5>
+            <p class="casa-texto">microondas, geladeira, pia e mesa</p>
+          </div>
+        </div>
+
+        <div class="row casa-box">
+          <div class="six columns">
+            <img class="casa-img" src="assets/images/primeira-casa/sala.jpg">
+            <h5 class="casa-tipo">Sala</h5>
+            <p class="casa-texto">2 sofás, mesa, televisão e mesa de centro</p>
+          </div>
+          <div class="six columns">
+            <img class="casa-img" src="assets/images/primeira-casa/banheiro.jpg">
+            <h5 class="casa-tipo">Banheiro</h5>
+            <p class="casa-texto">chuveiro, vaso, pia e espelho</p>
           </div>
         </div>
 
@@ -117,40 +123,46 @@
       <div class="container">
 
         <div class="row">
-          <h4>Morada da Lagoa</h4>
+          <h4 class="casa-nome">Morada da Lagoa</h4>
           <hr />
         </div>
 
-        <div class="row">
+        <div class="row casa-box">
           <div class="six columns">
-            <img src="assets/images/segunda-casa/quarto-casal-1.jpg">
-            <p>Quarto Casal 1</p>
+            <img class="casa-img" src="assets/images/segunda-casa/quarto-casal-1.jpg">
+            <h5 class="casa-tipo">Quarto 1</h5>
+            <p class="casa-texto">1 cama de casal, e roupeiro</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/segunda-casa/quarto-solteiro.jpg">
-            <p>Quarto Solteiro</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="six columns">
-            <img src="assets/images/segunda-casa/quarto-casal-2.jpg">
-            <p>Quarto Casal 2</p>
-          </div>
-          <div class="six columns">
-            <img src="assets/images/segunda-casa/cozinha.jpg">
-            <p>Cozinha</p>
+            <img class="casa-img" src="assets/images/segunda-casa/quarto-solteiro.jpg">
+            <h5 class="casa-tipo">Quarto 2</h5>
+            <p class="casa-texto">2 camas de solteiro</p>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row casa-box">
           <div class="six columns">
-            <img src="assets/images/segunda-casa/sala.jpg">
-            <p>Sala</p>
+            <img class="casa-img" src="assets/images/segunda-casa/quarto-casal-2.jpg">
+            <h5 class="casa-tipo">Quarto 3</h5>
+            <p calss="casa-texto">1 cama de casal</p>
           </div>
           <div class="six columns">
-            <img src="assets/images/segunda-casa/banheiro.jpg">
-            <p>Banheiro</p>
+            <img class="casa-img" src="assets/images/segunda-casa/cozinha.jpg">
+            <h5 class="casa-tipo">Cozinha</h5>
+            <p class="casa-texto">microondas, geladeira, pia, fogão e armários</p>
+          </div>
+        </div>
+
+        <div class="row casa-box">
+          <div class="six columns">
+            <img class="casa-img" src="assets/images/segunda-casa/sala.jpg">
+            <h5 class="casa-tipo">Sala</h5>
+            <p class="casa-texto">mesa, sofá e tevlisor</p>
+          </div>
+          <div class="six columns">
+            <img class="casa-img" src="assets/images/segunda-casa/banheiro.jpg">
+            <h5 class="casa-tipo">Banheiro</h5>
+            <p class="casa-texto">chuveiro, vaso, pia e espelho</p>
           </div>
         </div>
       </div>
@@ -158,37 +170,54 @@
 
     <div id="background-two" class="row background"></div>
 
-    <div id="extra" class="row extras">
+    <div id="comodidade" class="row">
       <div class="container">
 
         <div class="row">
-          <h4> Extras </h4>
+          <h4 class="comodidade-titulo">Comodidades</h4>
           <hr />
         </div>
 
         <div class="row">
-          <h5>Acesso WiFi</h5>
-          <p> Temos WiFi em todas as cabanas</p>
+          <h5 class="comodidade-nome">Acesso WiFi</h5>
+          <p class="comodidade-texto"> Temos WiFi em todas as cabanas</p>
         </div>
 
         <div class="row">
-          <h5>Piscina</h5>
-          <p> Piscina compartilhada entre as cabanas, com vista para lagoa</p>
+          <h5 class="comodidade-nome">Estacionamento</h5>
+          <p class="comodidade-texto">Nosso estacionamento é seguro</p>
         </div>
 
         <div class="row">
-          <h5>Praia</h5>
-          <p>Você chega a praia em 10 minutos</p>
+          <h5 class="comodidade-nome">TV a Cabo</h5>
+          <p class="comodidade-texto">Mais opções de canais</p>
+        </div>
+
+
+        <div class="row">
+          <h5 class="comodidade-nome">Roupa de Cama</h5>
+          <p class="comodidade-texto">Quartos prontos e preparados</p>
         </div>
 
         <div class="row">
-          <h5>Estacionamento</h5>
-          <p>Seu automóvel também tem um local</p>
+          <h5 class="comodidade-nome">Ventiladores</h5>
+          <p class="comodidade-texto">Nossos quartos tem ventiladores</p>
         </div>
 
         <div class="row">
-          <h5>Churraqueira</h5>
-          <p>Churrasqueira, espetos e grelha para fazer aquele churrasco</p>
+          <h5 class="comodidade-nome">Cozinha</h5>
+          <p class="comodidade-texto">A Cozinha é toda completa</p>
+        </div>
+
+        <div class="row">
+          <h5 class="comodidade-nome">Praia</h5>
+          <p class="comodidade-texto">Você chega a praia em 10 minutos</p>
+        </div>
+
+        <div class="row">
+          <h5 class="comodidade-nome">Churraqueira</h5>
+          <p class="comodidade-texto">Disponibilizamos todos os apetrechos para você fazer aquele delicioso
+         churrasco </p>
         </div>
 
 
