Inserção de mais um paragrafo e alteração do texto

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         tranquilidade para descansar e aproveitar uma paisagem maravilhosa, bem
         como curtir as praias mais badaladas da região, com suas festas e vida
         noturna.
-        Além das belíssimas praias, a região oferece aos turistas trilhas
+        </p>
+        <p>
+        Belíssimas praias, a região oferece aos turistas trilhas
         ecológicas, passeios de stand up paddle e caiaque, aulas de kitesurf, além
         de excelentes restaurantes e os melhores bares e casas noturnas da região.
         </p>
