Alteração de comodidades para extras e inseção de Piscina

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul>
               <li><a href="#sobrado-da-lagoa">Sobrado da Lagoa</a></li>
               <li><a href="#morada-da-lagoa">Morada da Lagoa</a></li>
-              <li><a href="#comodidade">Comodidades</a></li>
+              <li><a href="#extra">Extra</a></li>
               <li><a href="#contato">Contato</a></li>
               <!-- <li><a href="#galeria">Galeria</a></li> -->
             </ul>
@@ -160,53 +160,58 @@
 
     <div id="background-two" class="row background"></div>
 
-    <div id="comodidade" class="row">
+    <div id="extra" class="row">
       <div class="container">
 
         <div class="row">
-          <h4 class="comodidade-titulo">Comodidades</h4>
+          <h4 class="extra-titulo">Comodidades</h4>
           <hr />
         </div>
 
         <div class="row">
-          <h5 class="comodidade-nome">Acesso WiFi</h5>
-          <p class="comodidade-texto"> Temos WiFi em todas as cabanas</p>
+          <h5 class="extra-nome">Acesso WiFi</h5>
+          <p class="extra-texto"> Temos WiFi em todas as cabanas</p>
         </div>
 
         <div class="row">
-          <h5 class="comodidade-nome">Estacionamento</h5>
-          <p class="comodidade-texto">Nosso estacionamento é seguro</p>
+          <h5 class="extra-nome">Estacionamento</h5>
+          <p class="extra-texto">Nosso estacionamento é seguro</p>
         </div>
 
         <div class="row">
-          <h5 class="comodidade-nome">TV a Cabo</h5>
-          <p class="comodidade-texto">Mais opções de canais</p>
+          <h5 class="extra-nome">TV a Cabo</h5>
+          <p class="extra-texto">Mais opções de canais</p>
         </div>
 
 
         <div class="row">
-          <h5 class="comodidade-nome">Roupa de Cama</h5>
-          <p class="comodidade-texto">Quartos prontos e preparados</p>
+          <h5 class="extra-nome">Roupa de Cama</h5>
+          <p class="extra-texto">Quartos prontos e preparados</p>
         </div>
 
         <div class="row">
-          <h5 class="comodidade-nome">Ventiladores</h5>
-          <p class="comodidade-texto">Nossos quartos tem ventiladores</p>
+          <h5 class="extra-nome">Ventiladores</h5>
+          <p class="extra-texto">Nossos quartos tem ventiladores</p>
         </div>
 
         <div class="row">
-          <h5 class="comodidade-nome">Cozinha</h5>
-          <p class="comodidade-texto">A Cozinha é toda completa</p>
+          <h5 class="extra-nome">Cozinha</h5>
+          <p class="extra-texto">A Cozinha é toda completa</p>
         </div>
 
         <div class="row">
-          <h5 class="comodidade-nome">Praia</h5>
-          <p class="comodidade-texto">Você chega a praia em 10 minutos</p>
+          <h5 class="extra-nome">Praia</h5>
+          <p class="extra-texto">Você chega a praia em 10 minutos</p>
         </div>
 
         <div class="row">
-          <h5 class="comodidade-nome">Churraqueira</h5>
-          <p class="comodidade-texto">Disponibilizamos todos os apetrechos para você fazer aquele delicioso
+          <h5 class="extra-nome">Piscina</h5>
+          <p class="extra-texto">Piscina para uso comum das duas casas </p>
+        </div>
+
+        <div class="row">
+          <h5 class="extra-nome">Churraqueira</h5>
+          <p class="extra-texto">Disponibilizamos todos os apetrechos para você fazer aquele delicioso
          churrasco </p>
         </div>
 
