Alterado comodidade por extra

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="container">
 
         <div class="row">
-          <h4 class="extra-titulo">Comodidades</h4>
+          <h4 class="extra-titulo">Extra</h4>
           <hr />
         </div>
 
