Acessibilidade nas imagens, e processos de Search Engine

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 	<head>
 		<meta charset="utf-8" />
 
-    <meta name="description" content="Ibizaquera website">
-    
+    <meta name="description" content="Localizada as margens da Lagoa de Ibiraquera, onde você pode encontrar a tranquilidade para descansar e aproveitar uma paisagem maravilhosa, bem como curtir as praias mais badaladas da região, com suas festas e vida noturna.Belíssimas praias, a região oferece aos turistas trilhas ecológicas, passeios de stand up paddle e caiaque, aulas de kitesurf, além de excelentes restaurantes e os melhores bares e casas noturnas da região.">
+
     <meta name="author" content="Skalldihor">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-		<title>Ibizaquera</title>
+    <title>Ibizaquera</title>
 
 		<link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="assets/css/skeleton.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/skeleton.css" />
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="assets/font/awesome-fonts/css/font-awesome.min.css">
@@ -23,7 +23,6 @@
 
     <link rel="icon" type="image/png" href="assets/image/favicon.png">
 
-		
 	</head>
 
 	<body>
@@ -81,33 +80,33 @@
 
         <div class="row casa-box">
           <div class="six columns">
-            <img class="casa-img" src="assets/images/primeira-casa/quarto-casal-1.jpg">
+            <img class="casa-img" src="assets/images/primeira-casa/quarto-casal-1.jpg" alt="Foto do quarto casal 1">
             <h5 class="casa-tipo">Quarto 1</h5>
           </div>
           <div class="six columns">
-            <img class="casa-img" src="assets/images/primeira-casa/quarto-casal-2.jpg">
+            <img class="casa-img" src="assets/images/primeira-casa/quarto-casal-2.jpg" alt="Foto do quarto casal 2">
             <h5 class="casa-tipo">Quarto 2</h5>
           </div>
         </div>
 
         <div class="row casa-box">
           <div class="six columns">
-            <img class="casa-img" src="assets/images/primeira-casa/quarto-solteiro.jpg">
+            <img class="casa-img" src="assets/images/primeira-casa/quarto-solteiro.jpg" alt="Foto do quarto solteiro">
             <h5 class="casa-tipo">Quarto 3</h5>
           </div>
           <div class="six columns">
-            <img class="casa-img" src="assets/images/primeira-casa/cozinha.jpg">
+            <img class="casa-img" src="assets/images/primeira-casa/cozinha.jpg" alt="Foto da cozinha">
             <h5 class="casa-tipo">Cozinha</h5>
           </div>
         </div>
 
         <div class="row casa-box">
           <div class="six columns">
-            <img class="casa-img" src="assets/images/primeira-casa/sala.jpg">
+            <img class="casa-img" src="assets/images/primeira-casa/sala.jpg" alt="Foto da sala">
             <h5 class="casa-tipo">Sala</h5>
           </div>
           <div class="six columns">
-            <img class="casa-img" src="assets/images/primeira-casa/banheiro.jpg">
+            <img class="casa-img" src="assets/images/primeira-casa/banheiro.jpg" alt="Foto do banheiro">
             <h5 class="casa-tipo">Banheiro</h5>
           </div>
         </div>
@@ -125,33 +124,33 @@
 
         <div class="row casa-box">
           <div class="six columns">
-            <img class="casa-img" src="assets/images/segunda-casa/quarto-casal-1.jpg">
+            <img class="casa-img" src="assets/images/segunda-casa/quarto-casal-1.jpg" alt="Foto do quarto de casal 1">
             <h5 class="casa-tipo">Quarto 1</h5>
           </div>
           <div class="six columns">
-            <img class="casa-img" src="assets/images/segunda-casa/quarto-solteiro.jpg">
+            <img class="casa-img" src="assets/images/segunda-casa/quarto-solteiro.jpg" alt="Foto do quarto de solteiro">
             <h5 class="casa-tipo">Quarto 2</h5>
           </div>
         </div>
 
         <div class="row casa-box">
           <div class="six columns">
-            <img class="casa-img" src="assets/images/segunda-casa/quarto-casal-2.jpg">
+            <img class="casa-img" src="assets/images/segunda-casa/quarto-casal-2.jpg" alt="Foto do quarto de casal 2">
             <h5 class="casa-tipo">Quarto 3</h5>
           </div>
           <div class="six columns">
-            <img class="casa-img" src="assets/images/segunda-casa/cozinha.jpg">
+            <img class="casa-img" src="assets/images/segunda-casa/cozinha.jpg" alt="Foto da cozinha">
             <h5 class="casa-tipo">Cozinha</h5>
           </div>
         </div>
 
         <div class="row casa-box">
           <div class="six columns">
-            <img class="casa-img" src="assets/images/segunda-casa/sala.jpg">
+            <img class="casa-img" src="assets/images/segunda-casa/sala.jpg" alt="Foto da sala">
             <h5 class="casa-tipo">Sala</h5>
           </div>
           <div class="six columns">
-            <img class="casa-img" src="assets/images/segunda-casa/banheiro.jpg">
+            <img class="casa-img" src="assets/images/segunda-casa/banheiro.jpg" alt="Foto do banheiro">
             <h5 class="casa-tipo">Banheiro</h5>
           </div>
         </div>
