Alterações felipe, check(in,out), regras, multas, cores pasteis

--- a/index.html
+++ b/index.html
@@ -168,56 +168,71 @@
         </div>
 
         <div class="row">
-          <h5 class="extra-nome">Acesso WiFi</h5>
-          <p class="extra-texto"> Temos WiFi em todas as cabanas</p>
+          <p class="extra-texto"> Temos WiFi em todas as Casas</p>
         </div>
 
         <div class="row">
-          <h5 class="extra-nome">Estacionamento</h5>
           <p class="extra-texto">Nosso estacionamento é seguro</p>
         </div>
 
         <div class="row">
-          <h5 class="extra-nome">TV a Cabo</h5>
-          <p class="extra-texto">Mais opções de canais</p>
-        </div>
-
-
-        <div class="row">
-          <h5 class="extra-nome">Roupa de Cama</h5>
-          <p class="extra-texto">Quartos prontos e preparados</p>
+          <p class="extra-texto">Tv a Cabo : mais opções de canais</p>
         </div>
 
         <div class="row">
-          <h5 class="extra-nome">Ventiladores</h5>
           <p class="extra-texto">Nossos quartos tem ventiladores</p>
         </div>
 
         <div class="row">
-          <h5 class="extra-nome">Cozinha</h5>
           <p class="extra-texto">A Cozinha é toda completa</p>
         </div>
 
         <div class="row">
-          <h5 class="extra-nome">Praia</h5>
-          <p class="extra-texto">Você chega a praia em 10 minutos</p>
-        </div>
-
-        <div class="row">
-          <h5 class="extra-nome">Piscina</h5>
           <p class="extra-texto">Piscina para uso comum das duas casas </p>
         </div>
 
         <div class="row">
-          <h5 class="extra-nome">Churraqueira</h5>
-          <p class="extra-texto">Disponibilizamos todos os apetrechos para você fazer aquele delicioso
-         churrasco </p>
+          <p class="extra-texto">Churrasqueiras</p>
         </div>
 
 
       </div>
     </div>
 
+    <div id="informacoes" class="row informacoes">
+      <div class="container">
+        
+        <div class="row">
+
+          <div class="six columns check-in">
+            <h5>Check-in</h5>
+            <h3>12:00</h3>
+            <p>Meio dia</p>
+          </div>
+
+          <div class="six columns check-out">
+            <h5>Check-out</h5>
+            <h3>12:00</h3>
+            <p>Meio dia</p>
+          </div>
+        </div>
+        <div class="row multa-check-out">
+          <p> Caso os hóspedes estendam sua estadia além do horário do check-out (12h), será cobrado:</p>
+          <p> meia diária, no caso de ficar até as 22h</p>
+          <p> uma diária, no caso de ficar após as 22h</p>
+        </div>  
+
+        <div class="row regra">
+          <ul>
+            <li>Não é permitido fumar no interior do imóvel</li>
+            <li>Deve ser Respeitado o horário de silêncio (das 22h ás 9h)</li>
+            <li>O uso de aparelhos de som é permitido apenas no interior do imóvel e desde que não pertube os outros hóspedes</li>
+            <li>Não é permitido o uso de copos de vidro na área da piscina</li>
+          </ul> 
+        </div>
+
+      </div>
+    </div>
 
 
     <div id="background-three" class="row background"> </div>
