extra cor branca, regras vermelhas, extras simplificados

--- a/index.html
+++ b/index.html
@@ -168,31 +168,31 @@
         </div>
 
         <div class="row">
-          <p class="extra-texto"> Temos WiFi em todas as Casas</p>
+          <p class="extra-texto">Internet sem fio</p>
         </div>
 
         <div class="row">
-          <p class="extra-texto">Nosso estacionamento é seguro</p>
+          <p class="extra-texto">Estacionamento seguro</p>
         </div>
 
         <div class="row">
-          <p class="extra-texto">Tv a Cabo : mais opções de canais</p>
+          <p class="extra-texto">Tv a cabo</p>
         </div>
 
         <div class="row">
-          <p class="extra-texto">Nossos quartos tem ventiladores</p>
+          <p class="extra-texto">Ventiladores nos quartos</p>
         </div>
 
         <div class="row">
-          <p class="extra-texto">A Cozinha é toda completa</p>
-        </div>
-
-        <div class="row">
-          <p class="extra-texto">Piscina para uso comum das duas casas </p>
+          <p class="extra-texto">Cozinha completa</p>
         </div>
 
         <div class="row">
           <p class="extra-texto">Churrasqueiras</p>
+        </div>
+
+        <div class="row">
+          <p class="extra-texto">Piscina para uso comum das duas casas </p>
         </div>
 
 
