--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
         <div class="row">
         <p>
         Localizada as margens da Lagoa de Ibiraquera, onde você pode encontrar a
-        tranquilidade para descansar e aproveitar uma paisagem maravilhosa, bem
-        como curtir as praias mais badaladas da região, com suas festas e vida
-        noturna.
+        tranquilidade para descansar e aproveitar uma paisagem maravilhosa e curtir 
+        as praias mais badaladas da região, com suas festas e vida noturna.
         </p>
         <p>
         Belíssimas praias, a região oferece aos turistas trilhas
