Botão contato whatsapp

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</head>
 
 	<body>
-   
+
     <div class="row header">
       <div class="container">
         <div class="row">
@@ -56,7 +56,7 @@
         <div class="row">
         <p>
         Localizada as margens da Lagoa de Ibiraquera, onde você pode encontrar a
-        tranquilidade para descansar e aproveitar uma paisagem maravilhosa e curtir 
+        tranquilidade para descansar e aproveitar uma paisagem maravilhosa e curtir
         as praias mais badaladas da região, com suas festas e vida noturna.
         </p>
         <p>
@@ -200,7 +200,7 @@
 
     <div id="informacoes" class="row informacoes">
       <div class="container">
-        
+
         <div class="row">
 
           <div class="six columns check-in">
@@ -219,7 +219,7 @@
           <p> Caso os hóspedes estendam sua estadia além do horário do check-out (12h), será cobrado:</p>
           <p> meia diária, no caso de ficar até as 22h</p>
           <p> uma diária, no caso de ficar após as 22h</p>
-        </div>  
+        </div>
 
         <div class="row regra">
           <ul>
@@ -227,7 +227,7 @@
             <li>Deve ser Respeitado o horário de silêncio (das 22h ás 9h)</li>
             <li>O uso de aparelhos de som é permitido apenas no interior do imóvel e desde que não pertube os outros hóspedes</li>
             <li>Não é permitido o uso de copos de vidro na área da piscina</li>
-          </ul> 
+          </ul>
         </div>
 
       </div>
@@ -238,7 +238,7 @@
 
     <div id="contato" class="row contato">
       <div class="container">
-        
+
         <div class="row">
 
           <div class="six columns">
@@ -266,7 +266,11 @@
       </div>
     </div>
 
-
+		<div class="whatsapp-buttom">
+			<a class="whatsapp-web" href="https://web.whatsapp.com/send?phone=5548996206794&text=teste"><img src="assets/images/icones/whatsapp.png" alt="Whatsapp contato"></a>
+			<a class="whatsapp-mobile" href="https://api.whatsapp.com/send?phone=5548996206794&text=teste"><img src="assets/images/icones/whatsapp.png" alt="Whatsapp contato"></a>
+		</div>
+		
 	</body>
 
 </html>
