Correção botão whatsapp

--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
     </div>
 
 		<div class="whatsapp-buttom">
-			<a class="whatsapp-web" href="https://web.whatsapp.com/send?phone=5548996206794&text=teste"><img src="assets/images/icones/whatsapp.png" alt="Whatsapp contato"></a>
-			<a class="whatsapp-mobile" href="https://api.whatsapp.com/send?phone=5548996206794&text=teste"><img src="assets/images/icones/whatsapp.png" alt="Whatsapp contato"></a>
+			<a class="whatsapp-web" href="https://web.whatsapp.com/send?phone=5548996219569&text=Olá! Estou entrando em contato pelo chat Whatsapp do seu site, Ibizaquera. Poderia me ajudar?"><img src="assets/images/icones/whatsapp.png" alt="Whatsapp contato"></a>
+			<a class="whatsapp-mobile" href="https://api.whatsapp.com/send?phone=5548996219569&text=Olá! Estou entrando em contato pelo chat Whatsapp do seu site, Ibizaquera. Poderia me ajudar?"><img src="assets/images/icones/whatsapp.png" alt="Whatsapp contato"></a>
 		</div>
-		
+
 	</body>
 
 </html>
