remoção informações de check in/out

--- a/index.html
+++ b/index.html
@@ -200,28 +200,8 @@
 
     <div id="informacoes" class="row informacoes">
       <div class="container">
-
-        <div class="row">
-
-          <div class="six columns check-in">
-            <h5>Check-in</h5>
-            <h3>12:00</h3>
-            <p>Meio dia</p>
-          </div>
-
-          <div class="six columns check-out">
-            <h5>Check-out</h5>
-            <h3>12:00</h3>
-            <p>Meio dia</p>
-          </div>
-        </div>
-        <div class="row multa-check-out">
-          <p> Caso os hóspedes estendam sua estadia além do horário do check-out (12h), será cobrado:</p>
-          <p> meia diária, no caso de ficar até as 22h</p>
-          <p> uma diária, no caso de ficar após as 22h</p>
-        </div>
-
         <div class="row regra">
+					<h3>Regras</h3>
           <ul>
             <li>Não é permitido fumar no interior do imóvel</li>
             <li>Deve ser Respeitado o horário de silêncio (das 22h ás 9h)</li>
