--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 
         <div class="row">
           <p class="extra-texto">Piscina para uso comum das duas casas </p>
+					<hr/>
         </div>
 
 
@@ -201,7 +202,7 @@
     <div id="informacoes" class="row informacoes">
       <div class="container">
         <div class="row regra">
-					<h3>Regras</h3>
+					<h2>Regras</h2>
           <ul>
             <li>Não é permitido fumar no interior do imóvel</li>
             <li>Deve ser Respeitado o horário de silêncio (das 22h ás 9h)</li>
@@ -239,8 +240,7 @@
       <div class="container">
         <div class="row">
           <p>
-          Feito com <strong class="assinatura-amor">Amor</strong>
-          por <a href="https://skalldihor.github.io"><strong class="assinatura-autor">Skalldihor</strong></a>
+						<a href="https://skalldihor.github.io"><strong class="assinatura-autor">Skalldihor</strong></a>
           </p>
         </div>
       </div>
